--- a/lesson3_pubchempy/lecture_note_pubchem.ipynb
+++ b/lesson3_pubchempy/lecture_note_pubchem.ipynb
@@ -48,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "'macOS-10.15.7-x86_64-i386-64bit'"
+       "'macOS-10.16-x86_64-i386-64bit'"
       ]
      },
      "execution_count": 1,
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.8.11\r\n"
+      "Python 3.9.7\r\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.1.3'"
+       "'1.3.2'"
       ]
      },
      "execution_count": 4,
@@ -634,7 +634,7 @@
      "output_type": "stream",
      "text": [
       "5280343\n",
-      "  -OEChem-09222101282D\n",
+      "  -OEChem-09222101442D\n",
       "\n",
       " 32 34  0     0  0  0  0  0  0999 V2000\n",
       "    6.0682   -0.2704    0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0\n",
@@ -1309,7 +1309,7 @@
      "text": [
       "--------error-----------\n",
       "99-99-99\n",
-      "(<class 'KeyError'>, KeyError('CID'), <traceback object at 0x7f80887e0340>)\n"
+      "(<class 'KeyError'>, KeyError('CID'), <traceback object at 0x7f85100d03c0>)\n"
      ]
     },
     {
@@ -3585,7 +3585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
