windowsからREADMEを追加

--- a/lesson02_jupyter/lecture_note.ipynb
+++ b/lesson02_jupyter/lecture_note.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "'macOS-10.15.7-x86_64-i386-64bit'"
+       "'Windows-10-10.0.19042-SP0'"
       ]
      },
      "execution_count": 2,
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.8.11\r\n"
+      "Python 3.8.11\n"
      ]
     }
    ],
@@ -453,21 +453,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>240</th>\n",
-       "      <td>376</td>\n",
-       "      <td>CC1OC(OC2=CC(O)=C3C(=O)C(OC4OC(CO)C(O)C(O)C4O)...</td>\n",
+       "      <th>204</th>\n",
+       "      <td>321</td>\n",
+       "      <td>[H][C@@]1(C)O[C@@]([H])(OC[C@@]2([H])O[C@@]([H...</td>\n",
        "      <td>Flavonoids</td>\n",
        "      <td>Flavonols</td>\n",
-       "      <td>Kaempferol 3-O-galactoside 7-O-rhamnoside</td>\n",
-       "      <td>594.518</td>\n",
-       "      <td>C27H30O15</td>\n",
+       "      <td>Kaempferol 3-O-glucosyl-rhamnosyl-galactoside</td>\n",
+       "      <td>756.659</td>\n",
+       "      <td>C33H40O20</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2007-05-21 00:00:00 UTC</td>\n",
-       "      <td>2015-05-10 23:28:49 UTC</td>\n",
-       "      <td>-1.7438</td>\n",
-       "      <td>0.153572</td>\n",
-       "      <td>594.15847</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2003-04-17 13:37:32 UTC</td>\n",
+       "      <td>2015-05-10 23:28:47 UTC</td>\n",
+       "      <td>-3.5685</td>\n",
+       "      <td>0.10045</td>\n",
+       "      <td>756.211294</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -478,19 +478,19 @@
       ],
       "text/plain": [
        "      id                                             smiles compound_class  \\\n",
-       "240  376  CC1OC(OC2=CC(O)=C3C(=O)C(OC4OC(CO)C(O)C(O)C4O)...     Flavonoids   \n",
+       "204  321  [H][C@@]1(C)O[C@@]([H])(OC[C@@]2([H])O[C@@]([H...     Flavonoids   \n",
        "\n",
-       "    compound_subclass                                       name  \\\n",
-       "240         Flavonols  Kaempferol 3-O-galactoside 7-O-rhamnoside   \n",
+       "    compound_subclass                                           name  \\\n",
+       "204         Flavonols  Kaempferol 3-O-glucosyl-rhamnosyl-galactoside   \n",
        "\n",
        "     molecular_weight    formula cas_number               created_at  \\\n",
-       "240           594.518  C27H30O15        NaN  2007-05-21 00:00:00 UTC   \n",
+       "204           756.659  C33H40O20        NaN  2003-04-17 13:37:32 UTC   \n",
        "\n",
-       "                  updated_at  MolLogP       qed  ExactMolWt  fr_phenol  \\\n",
-       "240  2015-05-10 23:28:49 UTC  -1.7438  0.153572   594.15847          2   \n",
+       "                  updated_at  MolLogP      qed  ExactMolWt  fr_phenol  \\\n",
+       "204  2015-05-10 23:28:47 UTC  -3.5685  0.10045  756.211294          3   \n",
        "\n",
        "     fr_methoxy  fr_lactone  fr_urea  \n",
-       "240           0           0        0  "
+       "204           0           0        0  "
       ]
      },
      "execution_count": 8,
@@ -1498,30 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "bc1004ef",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "compounds-structures.csv  output.csv\r\n",
-      "lunch_box.csv             processed_datamart.csv\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls data/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "cc0a446d",
    "metadata": {},
    "outputs": [],
@@ -1531,59 +1508,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "cf4149ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "無効なスイッチです - \"output2.csv\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "!del data/output2.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
-   "id": "fbad5e8d",
+   "id": "26b2fb17",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "compounds-structures.csv  output.csv                processed_datamart.csv\r\n",
-      "lunch_box.csv             output2.csv\r\n"
+      " ドライブ C のボリューム ラベルは TIH0377400B です\n",
+      " ボリューム シリアル番号は 3C9C-121F です\n",
+      "\n",
+      " C:\\Users\\lecture\\PycharmProjects\\lecture-beginner\\lesson02_jupyter のディレクトリ\n",
+      "\n",
+      "2021/10/08  07:17    <DIR>          .\n",
+      "2021/10/08  07:17    <DIR>          ..\n",
+      "2021/10/07  11:29    <DIR>          .ipynb_checkpoints\n",
+      "2021/10/08  07:18    <DIR>          data\n",
+      "2021/10/07  10:39             2,201 homework.ipynb\n",
+      "2021/10/08  07:17            77,186 lecture_note.ipynb\n",
+      "2021/10/07  10:39             1,728 README.md\n",
+      "2021/10/07  10:39               265 Vimeo【初級】ケモインフォマティクス_2回目.webloc\n",
+      "2021/10/07  10:39            53,848 データ作成.ipynb\n",
+      "               5 個のファイル             135,228 バイト\n",
+      "               4 個のディレクトリ  320,971,943,936 バイトの空き領域\n"
      ]
     }
    ],
    "source": [
-    "ls data/"
+    "!dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "864c1f4c",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "execution_count": 34,
+   "id": "c6d30906",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!rm data/output2.csv"
+    "!del data\\output2.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "b7216d6b",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "compounds-structures.csv  output.csv\r\n",
-      "lunch_box.csv             processed_datamart.csv\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls data/"
-   ]
+   "execution_count": null,
+   "id": "ee59310a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1596,6 +1586,14 @@
    "source": [
     "# 以上です"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e099602b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
