jupyterのデータとhomeworkを追加

--- a/lesson02_jupyter/homework.ipynb
+++ b/lesson02_jupyter/homework.ipynb
@@ -5,30 +5,16 @@
    "id": "bcbb82b1",
    "metadata": {},
    "source": [
-    "# 問題１ 使用しているPandasのバージョンを出力せよ。"
+    "# 問題１ Pandasをimportしてバージョンを出力せよ。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fbe69723",
+   "execution_count": null,
+   "id": "ad423c33",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.1.3'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "pd.__version__"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -39,9 +25,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6838f0d",
+   "metadata": {},
+   "source": [
+    "http://phenol-explorer.eu/downloads\n",
+    "の中の\"Structures for Polyphenol Metabolites (SMILES)\"を読み込んでみよ。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4357f794",
+   "id": "bdf4cc0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -51,13 +46,13 @@
    "id": "757ae851",
    "metadata": {},
    "source": [
-    "# 問題３"
+    "# 問題３読み込んだデータの欠損状態の確認せよ。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0ab5c07",
+   "id": "42078ada",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -67,13 +62,13 @@
    "id": "90320d6b",
    "metadata": {},
    "source": [
-    "# 問題４"
+    "# 問題４\"metabolite_class\"をone-hot表現に変更して1行表示せよ。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e9f2867",
+   "id": "e0497e0a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -83,13 +78,13 @@
    "id": "3bf793f5",
    "metadata": {},
    "source": [
-    "# 問題５"
+    "# 問題５\"molecular_weight\"の分布をhistgramで図示せよ。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c36ef89",
+   "id": "ed4e132a",
    "metadata": {},
    "outputs": [],
    "source": []
