--- a/lesson02_jupyter/lecture_note.ipynb
+++ b/lesson02_jupyter/lecture_note.ipynb
@@ -127,7 +127,18 @@
     "    \n",
     "- [StatsFragments by @sinhrks](http://sinhrks.hatenablog.com/)\n",
     "    - 各種Pandasメソッドを図付きで詳細に解説してくれています。非常に参考になる。\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f46f906d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "**集計テクニック系**\n",
     "- [pandasで条件分岐(case when的な)によるデータ加工を網羅したい](https://qiita.com/Hyperion13fleet/items/98c31744e66ac1fc1e9f)\n",
     "    - SQLのcase whenのような条件分岐の処理をpandasでやりたいときが良くありますがなかなか難しい。そんなときのお助け記事。\n",
@@ -150,13 +161,13 @@
    "source": [
     "# 目次\n",
     "\n",
-    "# 1. データの読み込み\n",
-    "# 2. データや統計量の表示\n",
-    "# 3. データの欠損状態の確認\n",
-    "# 4. データの並び替え\n",
-    "# 5. データの追加\n",
-    "# 6. データの表示\n",
-    "# 7. データの出力"
+    "### 1. データの読み込み\n",
+    "### 2. データや統計量の表示\n",
+    "### 3. データの欠損状態の確認\n",
+    "### 4. データの並び替え\n",
+    "### 5. データの追加\n",
+    "### 6. データの表示\n",
+    "### 7. データの出力"
    ]
   },
   {
@@ -453,21 +464,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>240</th>\n",
-       "      <td>376</td>\n",
-       "      <td>CC1OC(OC2=CC(O)=C3C(=O)C(OC4OC(CO)C(O)C(O)C4O)...</td>\n",
+       "      <th>23</th>\n",
+       "      <td>29</td>\n",
+       "      <td>O[C@H]1CO[C@H](OC2=CC3=C(O)C=C(O)C=C3[O+]=C2C2...</td>\n",
        "      <td>Flavonoids</td>\n",
-       "      <td>Flavonols</td>\n",
-       "      <td>Kaempferol 3-O-galactoside 7-O-rhamnoside</td>\n",
-       "      <td>594.518</td>\n",
-       "      <td>C27H30O15</td>\n",
+       "      <td>Anthocyanins</td>\n",
+       "      <td>Delphinidin 3-O-arabinoside</td>\n",
+       "      <td>435.358</td>\n",
+       "      <td>C20H19O11</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2007-05-21 00:00:00 UTC</td>\n",
-       "      <td>2015-05-10 23:28:49 UTC</td>\n",
-       "      <td>-1.7438</td>\n",
-       "      <td>0.153572</td>\n",
-       "      <td>594.15847</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2005-01-27 00:00:00 UTC</td>\n",
+       "      <td>2015-05-10 23:28:37 UTC</td>\n",
+       "      <td>0.7267</td>\n",
+       "      <td>0.213558</td>\n",
+       "      <td>435.092188</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -477,20 +488,17 @@
        "</div>"
       ],
       "text/plain": [
-       "      id                                             smiles compound_class  \\\n",
-       "240  376  CC1OC(OC2=CC(O)=C3C(=O)C(OC4OC(CO)C(O)C(O)C4O)...     Flavonoids   \n",
+       "    id                                             smiles compound_class  \\\n",
+       "23  29  O[C@H]1CO[C@H](OC2=CC3=C(O)C=C(O)C=C3[O+]=C2C2...     Flavonoids   \n",
        "\n",
-       "    compound_subclass                                       name  \\\n",
-       "240         Flavonols  Kaempferol 3-O-galactoside 7-O-rhamnoside   \n",
+       "   compound_subclass                         name  molecular_weight  \\\n",
+       "23      Anthocyanins  Delphinidin 3-O-arabinoside           435.358   \n",
        "\n",
-       "     molecular_weight    formula cas_number               created_at  \\\n",
-       "240           594.518  C27H30O15        NaN  2007-05-21 00:00:00 UTC   \n",
+       "      formula cas_number               created_at               updated_at  \\\n",
+       "23  C20H19O11        NaN  2005-01-27 00:00:00 UTC  2015-05-10 23:28:37 UTC   \n",
        "\n",
-       "                  updated_at  MolLogP       qed  ExactMolWt  fr_phenol  \\\n",
-       "240  2015-05-10 23:28:49 UTC  -1.7438  0.153572   594.15847          2   \n",
-       "\n",
-       "     fr_methoxy  fr_lactone  fr_urea  \n",
-       "240           0           0        0  "
+       "    MolLogP       qed  ExactMolWt  fr_phenol  fr_methoxy  fr_lactone  fr_urea  \n",
+       "23   0.7267  0.213558  435.092188          5           0           0        0  "
       ]
      },
      "execution_count": 8,
@@ -752,7 +760,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "ef3faf3c",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -851,7 +863,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "bb7e9561",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -944,7 +960,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "fca7aa08",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# 上書きする。\n",
@@ -1097,7 +1117,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "d81e49fd",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# 自作した関数を入れる。\n",
@@ -1510,8 +1534,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "compounds-structures.csv  output.csv\r\n",
-      "lunch_box.csv             processed_datamart.csv\r\n"
+      "compounds-structures.csv  output.csv\r\n"
      ]
     }
    ],
@@ -1539,8 +1562,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "compounds-structures.csv  output.csv                processed_datamart.csv\r\n",
-      "lunch_box.csv             output2.csv\r\n"
+      "compounds-structures.csv  output.csv                output2.csv\r\n"
      ]
     }
    ],
@@ -1576,8 +1598,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "compounds-structures.csv  output.csv\r\n",
-      "lunch_box.csv             processed_datamart.csv\r\n"
+      "compounds-structures.csv  output.csv\r\n"
      ]
     }
    ],
