--- a/lesson02_jupyter/lecture_note.ipynb
+++ b/lesson02_jupyter/lecture_note.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "09791f63",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -15,7 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aa93d06f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -30,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1bcfcd5b",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d890213",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +68,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9bbdaf50",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +88,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c793e3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -108,7 +102,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b0d55d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -132,7 +125,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f46f906d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -152,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e07d8505",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -172,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0227d7ba",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -184,7 +174,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b44f50",
    "metadata": {},
    "source": [
     "元のデータ\n",
@@ -198,7 +187,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f9eea9f9",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -211,7 +199,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d124fb6a",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -224,7 +211,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0bd8584e",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -325,7 +311,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "856b2421",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +404,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6630688b",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +497,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b5f5ec90",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +666,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "274d5eff",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +685,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "985517f8",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -716,7 +697,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "01086a63",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -759,7 +739,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ef3faf3c",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -784,7 +763,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0f079d1b",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +784,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "157ec4b2",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +805,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5fb12a15",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +825,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f8713cb",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -862,7 +837,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bb7e9561",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -891,7 +865,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "343a1535",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +932,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fca7aa08",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -974,7 +946,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "09e4cf59",
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1011,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d6e698f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1053,7 +1023,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "10ef4cec",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1068,7 +1037,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ac775725",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1063,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3a50844b",
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1083,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d81e49fd",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1137,7 +1103,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "69ee90b3",
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1346,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1773bf27",
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1367,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "47f19c4d",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1428,7 +1391,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22c6f768",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1441,7 +1403,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1c48fe53",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1478,7 +1439,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "390a119e",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1470,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2166159",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1523,7 +1482,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bc1004ef",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1545,7 +1503,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cc0a446d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1512,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fbad5e8d",
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1529,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "864c1f4c",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1587,7 +1542,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b7216d6b",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1608,7 +1562,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54632e23",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1622,7 +1575,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1636,7 +1589,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
