--- a/lesson04_RDKit/lecture_note_RDKit_no1_分子の読み込みと表示と出力.ipynb
+++ b/lesson04_RDKit/lecture_note_RDKit_no1_分子の読み込みと表示と出力.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3291d683",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -35,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "42275c04",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -62,7 +60,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "371a6cf8",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7c902b2a",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e4da8ed0",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +124,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "445e953f",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +141,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65af40ad",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -159,7 +152,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e457e6c3",
    "metadata": {},
    "source": [
     "## rdkit.Chem.MolFromSmiles(smiles)"
@@ -168,7 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "75dcf075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +169,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b0b6a232",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c04184b2",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +212,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c3542173",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -248,7 +236,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1900d397",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +261,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34e0076",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -287,7 +273,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0ddba052",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +483,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3fea0c26",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -523,7 +507,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c97851ac",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -536,7 +519,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a0d707e1",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +540,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cb0d5b69",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +561,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1a33aa71",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -631,7 +611,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ced47fd7",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -644,7 +623,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4f4c9b50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +632,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "749d8652",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +652,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "56adddc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +662,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "590dc7a7",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +682,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f49c8444",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -741,7 +715,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99ac1864",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -754,7 +727,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "aa275dd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +736,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b35ef575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +745,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4d33ec0c",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +853,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "31ec64d7",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +881,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bc1c9c40",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -971,7 +939,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da4a043",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -984,7 +951,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "051a2797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +961,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "26dcf111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +983,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b408f4bc",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1095,7 +1059,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5d31ce53",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1110,7 +1073,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d4750d0a",
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1139,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "543f7062",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1190,7 +1151,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1b7952e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1160,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a3156c58",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1229,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd0e8ac",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1283,7 +1241,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "64989bf0",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1314,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d574eb3f",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1338,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b4b2dec8",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1396,7 +1351,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "01227222",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1376,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "17617741",
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1447,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "dee70692",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1508,7 +1460,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "94a6d07b",
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1485,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1548,7 +1499,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
