--- a/lesson04_RDKit/lecture_note_RDKit_no2_Descriptorsの使い方.ipynb
+++ b/lesson04_RDKit/lecture_note_RDKit_no2_Descriptorsの使い方.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ae90aa1",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "71edcf4b",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "603bf24e",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b55f70bc",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "774e9ab3",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +108,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b890f71",
    "metadata": {},
    "source": [
     "# 1つの分子に対してDescriptorで数字を表示する。"
@@ -122,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb1d2ca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ce1378a0",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +150,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d040369f",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +171,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa42b7c6",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +192,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "37e898aa",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +212,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccfbf53b",
    "metadata": {},
    "source": [
     "# 複数分子を読み込んだデータフレームにDescriptorを追加する。"
@@ -232,7 +220,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e7c98c2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +229,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "952eaea0",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +285,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f0a18449",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +351,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "af67c957",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +383,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "72ae12c7",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +414,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95fe13e1",
    "metadata": {},
    "source": [
     "# 複数分子を読み込んだデータフレームにDescriptorを全て追加する。"
@@ -440,7 +422,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0ca3a2df",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +441,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "158abdce",
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +837,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97d852c0",
    "metadata": {},
    "source": [
     "## morganfingerprintを表示"
@@ -866,7 +845,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b8bacb9a",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +877,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "262e4b30",
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1235,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d77aad7f",
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1438,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1476,7 +1452,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
